--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Daily Fitness Guide for a Healthier You</title>
+  <title>Daily Wealth & Wellness: Your Blueprint for Success</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(135deg, #f0fff4, #e0f7f1);
-      color: #2a2a2a;
+      background: linear-gradient(135deg, #f3f5ff, #eafaf1);
+      color: #1d1d1d;
       padding: 30px 20px;
       max-width: 960px;
       margin: auto;
     }
     h1, h2 {
-      color: #13795b;
+      color: #0b8c68;
     }
     .section {
       background: #ffffff;
       padding: 25px;
       margin-bottom: 25px;
       border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
-      border-left: 6px solid #30c092;
+      border-left: 6px solid #4ac07d;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.06);
     }
     ul {
       margin-top: 10px;
@@ -32,36 +32,37 @@
       margin-bottom: 8px;
     }
     .comment-section {
-      background: #f6fdfb;
+      background: #f4fdfc;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
     }
     .comment {
       background: #ffffff;
-      border-left: 4px solid #30c092;
+      border-left: 4px solid #4ac07d;
       margin-bottom: 15px;
       padding: 15px;
       border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
     }
     .username {
       font-weight: bold;
-      color: #157a6e;
+      color: #0d996d;
     }
     .time {
-      color: #888;
+      color: #999;
       font-size: 0.85em;
       margin-left: 10px;
     }
     h3 {
-      color: #19876c;
+      color: #188c6e;
     }
   </style>
 </head>
 <body>
 
-  <h1>Daily Fitness Guide for a Healthier You</h1>
+  <h1>Daily Wealth & Wellness: Your Blueprint for Success</h1>
+  <p>Welcome to your go-to guide for building a balanced life — where physical fitness meets smarter financial habits. Whether you're looking to improve your daily energy, create better routines, or make more informed lifestyle choices, this space is all about sustainable growth — one smart move at a time.</p>
 
   <div class="section">
     <h2>Best Times of Day to Exercise</h2>
